tests/negative/typecheck/catch.orng
// catch.orng:7:12: error: expected a value of type `Int`, got a value of type `Char`
//     x catch 4
//           ^
// 
fn main() -> Int {
    let x: ()!Char = .ok('4')
    x catch 4
}